--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   /* Светлая тема */
   --bg-primary: #ffffff;
-  --bg-secondary: #f8f9fa;
+  --bg-secondary: #dee2e6;
   --text-primary: #212529;
   --text-secondary: #6c757d;
   --border: #e9ecef;
